MFB: MFB52: Fixed bug #44874 (dead pfsockopen'ed sockets aren't reaped when the remote end restarts)